--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,9 @@
   </head>
 
   <body>
+  	<% flash.each do |key, value| %>
+  		<p><%= value %></p>
+  	<% end %>
     <%= yield %>
   </body>
 </html>
