--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,5 +3,5 @@
 <p><%= @post.body %></p>
 <!-- <%= link_to "Edit Post", edit_post_path %><br/> 
 <%= button_to "Delete", @post, data: { confirm: "Are you sure you want to delete?" }, method: :delete %> -->
-<p>Category: <%= @post.category.name %></p>
+<p>Category: <%= link_to @post.category.name,category_path(:id => @post.category.id) %></p>
 <p><%= link_to "Back", posts_path %></p>
