--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -1,2 +1,7 @@
-<h1>This is the home page</h1>
-<p>Welcome to My Ruby Blog</p>
+<h1>Welcome to My Ruby Blog</h1>
+<p>This is some info about our Ruby Blog website</p>
+<% @posts.each do |post| %>
+	<h3><%= link_to post.title, post %></h3>
+	<p><%= post.body %></p>
+	<hr>
+<% end %>
