--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,6 +1,8 @@
-<h1>Listing Categories</h1>
-<ul>
-<% @categories.each do |category| %>
-  <li><%= link_to category.name,category %></li>
-<% end %>
-</ul>
+<div class="post">
+	<h1>Listing Categories</h1>
+	<ul>
+	<% @categories.each do |category| %>
+	  <li><%= link_to category.name,category %></li>
+	<% end %>
+	</ul>
+</div>
