--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,7 +1,34 @@
 <div class="post">
 	<h1><%= @post.title %></h1>
 	<small><%= @post.created_at.strftime("%d %b. %Y") %></small>
+	<p>Created By: <%= @post.admin_user.name %></p>
 	<p><%= @post.body %></p>
 	<p>Category: <%= link_to @post.category.name,category_path(:id => @post.category.id) %></p>
 	<p><%= link_to "Back", posts_path %></p>
+	<hr />
+	<h3>Add a Comment</h3>
+	<%= form_for @post_comment do |f| %>
+		<%= f.hidden_field :post_id %>
+
+		<p>
+			<%= f.label :name %><br />
+			<%= f.text_field :name %><br />
+		</p>
+
+		<p>
+			<%= f.label :email %><br />
+			<%= f.text_field :email %><br />
+		</p>
+
+		<p>
+			<%= f.label :body %><br />
+			<%= f.text_area :body %><br />
+		</p>
+
+		<p>
+			<%= f.submit "Post Comment" %><br />
+		</p>
+	<% end %>
+	<hr />
+	<%= render :partial => 'partials/post_comment', :collection => @post.post_comments %>
 </div>
