--- a/app/views/pages/about.html.erb
+++ b/app/views/pages/about.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, 'About')%>
 <div class="post">
 	<h1>About My Ruby Blog</h1>
 	<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin elementum finibus massa ac tincidunt. Nam vehicula id tellus eu feugiat. Integer euismod sagittis iaculis. Ut dignissim magna vitae tincidunt suscipit. Nulla semper massa at tortor venenatis, condimentum tristique mauris auctor. Etiam blandit massa augue, quis semper ante pellentesque a. Suspendisse id feugiat ante, ac pellentesque arcu. Fusce nec massa blandit, volutpat velit eget, commodo magna. Cras lacinia eros non suscipit gravida. Donec imperdiet tortor elementum urna placerat tristique. Vestibulum eget purus facilisis, iaculis quam in, vulputate magna. Vivamus ex lectus, venenatis scelerisque rhoncus in, pretium a justo. Nulla rutrum tortor risus, non molestie augue efficitur id. Mauris ultrices nunc mi, sed efficitur arcu blandit et. Mauris semper interdum tristique.</p>
