--- a/app/views/pages/contact.html.erb
+++ b/app/views/pages/contact.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, 'Contact')%>
 <div class="post">
 	<h1>Pages#contact</h1>
 	<p>Find me in app/views/pages/contact.html.erb</p>
