--- a/app/views/categories/show.html.erb
+++ b/app/views/categories/show.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, @category.name)%>
 <% if @posts.each do |post| %>
 	<div class="post">
 		<h2 class="title"><%= link_to post.title, post %></h2>
