--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -1,3 +1,4 @@
+<% content_for(:title, 'Resources')%>
 <div class="post">
 	<h1>Pages#resources</h1>
 	<p>Find me in app/views/pages/resources.html.erb</p>
