--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -394,7 +394,7 @@ a:hover {
 
 /* Footer */
 
-#footer {
+footer {
 	width: 980px;
 	height: 50px;
 	margin: 0 auto;
@@ -402,7 +402,7 @@ a:hover {
 	font-family: Arial, Helvetica, sans-serif;
 }
 
-#footer p {
+footer p {
 	margin: 0;
 	line-height: normal;
 	font-size: 10px;
@@ -411,7 +411,7 @@ a:hover {
 	color: #847F7E;
 }
 
-#footer a {
+footer a {
 	color: #847F7E;
 }
 
