--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -1,5 +1,11 @@
 <% content_for(:title, 'Resources')%>
 <div class="post">
-	<h1>Pages#resources</h1>
-	<p>Find me in app/views/pages/resources.html.erb</p>
+	<h1>Resources</h1>
+	<p>This website was created on <a href="https://rubyonrails.org/">Ruby on Rails</a> by following the <a href="https://www.eduonix.com/dashboard/Learn-Ruby-on-Rails-for-Beginners-from-Scratch" target="_blank">Learn Ruby on Rails for Beginners from Scratch</a> course on <a href="https://www.eduonix.com/">Eduonix</a></p>
+	<p><a href="https://rubyonrails.org/" target="_blank">
+		<img src="https://rubyonrails.org/images/rails-logo.svg" alt="https://rubyonrails.org/" style="width: 140px; height: 63px;">
+	</a></p>
+	<p><a href="https://www.eduonix.com/" target="_blank">
+		<img src="https://cdnp-2f3a.kxcdn.com/assets/images/logo.png" alt="https://www.eduonix.com/" style="width: 140px; height: 63px;">
+	</a></p>
 </div>
