--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -140,6 +140,25 @@ a:hover {
 	padding: 20px 0px 0px 0px;
 }
 
+#search input[type="search"] {
+	width: 170px;
+	height: 23px;
+	padding: 4px 5px 1px 5px;
+	border: none;
+	background: #FFFFFF;
+	text-transform: lowercase;
+	font: normal 13px Arial, Helvetica, sans-serif;
+	color: #000000;
+}	
+
+#search input[type="submit"] {
+	width: 50px;
+	height: 26px;
+	border: none;
+	background: #D93544;
+	color: #FFFFFF;
+}
+
 /* Menu */
 
 #menu {
