--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -222,7 +222,7 @@ a:hover {
 	padding: 40px 0px 0px 0px;
 }
 
-.post,.post_full,.page {
+.post {
 	margin-bottom: 30px;
 	padding: 30px 20px 20px 20px;
 	background: #FFFFFF /*url(images/page-gradient-bg.png)*/ repeat-x left bottom;
@@ -231,7 +231,7 @@ a:hover {
 	outline-offset: -5px;
 }
 
-.post .title,.page .title {
+.post .title {
 	height: 41px;
 	padding: 0px 0px 0px 0px;
 	letter-spacing: -1px;
@@ -240,8 +240,6 @@ a:hover {
 
 .post .title a,.page .title a {
 	text-decoration: none;
-	color: #202020;
-	border: none;
 }
 
 .post .entry {
@@ -253,7 +251,6 @@ a:hover {
 .post .byline {
 	clear: both;
 	overflow: hidden;
-	padding-bottom: 20px;
 }
 
 .post .meta {
@@ -262,25 +259,6 @@ a:hover {
 
 .post .links {
 	float: right;
-}
-
-/* FULL POST */
-.post_full .byline p{
-    padding:0;
-    margin:0;
-}
-
-.post_full .byline{
-    clear: both;
-	overflow: hidden;
-	margin-bottom: 15px;
-        padding:5px;
-        background:black;
-        color:#fff;
-        border-left:5px #D93544 solid;
-}
-
-.links a {
 }
 
 /* Sidebar */
@@ -311,18 +289,8 @@ a:hover {
 #sidebar li li {
 	line-height: 35px;
 	border-bottom: 1px dashed #191919;
-	background: /*url(images/img01.jpg)*/ no-repeat left 15px; 
 	margin: 0px 20px 0px 20px;
-	border-left: none;
 	text-align: left;
-}
-
-#sidebar li li span {
-	display: block;
-	margin-top: -20px;
-	padding: 0;
-	font-size: 11px;
-	font-style: italic;
 }
 
 #sidebar li li a {
@@ -333,7 +301,6 @@ a:hover {
 	height: 31px;
 	margin: 0px 0px 20px 0px;
 	padding: 10px 0px 0px 20px;
-	background: /*url(images/img03.jpg)*/ no-repeat left top;
 	text-shadow: #203060 -1px 1px 2px;
 	text-align: left;
 	text-transform: uppercase;
@@ -342,42 +309,24 @@ a:hover {
 	color: #FFFFFF;
 }
 
-#sidebar p {
-	margin: 0 0px;
-	padding: 0px 20px 20px 20px;
-	text-align: justify;
-	color: #847F7E;
-}
-
 #sidebar a {
 	border: none;
 	color: #847F7E;
 }
 
+#sidebar .cat-link a {
+	color: #FFFFFF;
+	text-decoration: none;
+}
+
+#sidebar .cat-link a:hover {
+	color: #FFFFFF;
+	text-decoration: underline;
+}
+
 #sidebar a:hover {
 	text-decoration: underline;
 	color: #847F7E;
-}
-
-/* Calendar */
-
-#calendar {
-}
-
-#calendar_wrap {
-	padding: 20px;
-}
-
-#calendar table {
-	width: 100%;
-}
-
-#calendar tbody td {
-	text-align: center;
-}
-
-#calendar #next {
-	text-align: right;
 }
 
 /* Footer */
