--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -3,7 +3,9 @@
 	<h1><%= @post.title %></h1>
 	<small><%= @post.created_at.strftime("%d %b. %Y") %></small>
 	<p>Created By: <%= @post.admin_user.name %></p>
-	<p><%= @post.body %></p>
+	<div class="entry">
+		<p><%= @post.body %></p>
+	</div>
 	<p>Category: <%= link_to @post.category.name,category_path(:id => @post.category.id) %></p>
 	<p><%= link_to "Back", posts_path %></p>
 	<hr />
@@ -22,7 +24,7 @@
 		</p>
 
 		<p>
-			<%= f.label :body %><br />
+			<%= f.label "Comment" %><br />
 			<%= f.text_area :body %><br />
 		</p>
 
