--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -309,6 +309,13 @@ a:hover {
 	color: #FFFFFF;
 }
 
+#sidebar p {
+	margin: 0 0px;
+	padding: 0px 20px 20px 20px;
+	text-align: justify;
+	color: #847F7E;
+}
+
 #sidebar a {
 	border: none;
 	color: #847F7E;
