Changed order of posts shown in Welcome page. Added rails and eduonix logos to project - Fixes #4 and fixes #5

--- a/app/views/pages/resources.html.erb
+++ b/app/views/pages/resources.html.erb
@@ -3,9 +3,9 @@
 	<h1>Resources</h1>
 	<p>This website was created on <a href="https://rubyonrails.org/">Ruby on Rails</a> by following the <a href="https://www.eduonix.com/dashboard/Learn-Ruby-on-Rails-for-Beginners-from-Scratch" target="_blank">Learn Ruby on Rails for Beginners from Scratch</a> course on <a href="https://www.eduonix.com/">Eduonix</a></p>
 	<p><a href="https://rubyonrails.org/" target="_blank">
-		<img src="https://rubyonrails.org/images/rails-logo.svg" alt="https://rubyonrails.org/" style="width: 140px; height: 63px;">
+		<img src="rails-logo.svg" alt="https://rubyonrails.org/" style="width: 140px; height: 63px;">
 	</a></p>
 	<p><a href="https://www.eduonix.com/" target="_blank">
-		<img src="https://cdnp-2f3a.kxcdn.com/assets/images/logo.png" alt="https://www.eduonix.com/" style="width: 140px; height: 63px;">
+		<img src="eduonix.png" alt="https://www.eduonix.com/" style="width: 140px; height: 63px;">
 	</a></p>
 </div>
