Fixed link to comment section from posts page

--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -5,7 +5,7 @@
 		<div class="entry"><%= truncate(post.body, :length => 150) %></div>
 		<div class="byline">
 			<p class="meta"><%= post.created_at.strftime("%B %d, %Y") %> Posted by <%= post.admin_user.name %></p>
-			<p class="links"><%= link_to "Read More", post %> &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp; <%= link_to "Comments (#{ @comments[post.id] && @comments[post.id].count || 0 })", post %></p>
+			<p class="links"><%= link_to "Read More", post %> &nbsp;&nbsp;&nbsp;&nbsp;|&nbsp;&nbsp;&nbsp;&nbsp; <%= link_to "Comments (#{ @comments[post.id] && @comments[post.id].count || 0 })", post_path(post, anchor: "comments") %></p>
     	</div>
 	</div>
 <% end %>
