--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -15,17 +15,17 @@
 
 		<p>
 			<%= f.label :name %><br />
-			<%= f.text_field :name %><br />
+			<%= f.text_field :name, placeholder: "Please enter your name", required: true %><br />
 		</p>
 
 		<p>
 			<%= f.label :email %><br />
-			<%= f.text_field :email %><br />
+			<%= f.text_field :email, placeholder: "Please enter your email" %><br />
 		</p>
 
 		<p>
 			<%= f.label "Comment" %><br />
-			<%= f.text_area :body %><br />
+			<%= f.text_area :body, size: "22x10", placeholder: "Please enter your comment", required: true %><br />
 		</p>
 
 		<p>
